@@ -37,6 +37,7 @@ import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import lombok.SneakyThrows;
 import org.apache.commons.beanutils.PropertyUtils;
+import org.apache.commons.lang3.StringUtils;
 import picocli.CommandLine;
 
 public abstract class BaseCmd implements Runnable {
@@ -99,10 +100,22 @@ public abstract class BaseCmd implements Runnable {
         final LangStreamCLIConfig config = getConfig();
         final NamedProfile defaultProfile = new NamedProfile();
         defaultProfile.setName(BaseProfileCmd.DEFAULT_PROFILE_NAME);
-        defaultProfile.setTenant(config.getTenant());
+        if (config.getWebServiceUrl() == null) {
+            defaultProfile.setWebServiceUrl("http://localhost:8090");
+        } else {
+            defaultProfile.setWebServiceUrl(config.getWebServiceUrl());
+        }
+        if (config.getApiGatewayUrl() == null) {
+            defaultProfile.setApiGatewayUrl("ws://localhost:8091");
+        } else {
+            defaultProfile.setApiGatewayUrl(config.getApiGatewayUrl());
+        }
+        if (config.getTenant() == null) {
+            defaultProfile.setTenant("default");
+        } else {
+            defaultProfile.setTenant(config.getTenant());
+        }
         defaultProfile.setToken(config.getToken());
-        defaultProfile.setWebServiceUrl(config.getWebServiceUrl());
-        defaultProfile.setApiGatewayUrl(config.getApiGatewayUrl());
         return defaultProfile;
     }
 
@@ -119,7 +132,7 @@ public abstract class BaseCmd implements Runnable {
         final NamedProfile result = getConfig().getProfiles().get(profile);
         if (result == null) {
             throw new IllegalStateException(
-                    "No profile '%s' defined in configuration".formatted(profile));
+                    String.format("No profile '%s' defined in configuration", profile));
         }
         return result;
     }
@@ -128,7 +141,7 @@ public abstract class BaseCmd implements Runnable {
         final NamedProfile profile = getCurrentProfile();
         if (profile.getWebServiceUrl() == null) {
             throw new IllegalStateException(
-                    "No webServiceUrl defined for profile '%s'".formatted(profile.getName()));
+                    String.format("No webServiceUrl defined for profile '%s'", profile.getName()));
         }
         return AdminClientConfiguration.builder()
                 .webServiceUrl(profile.getWebServiceUrl())
@@ -153,15 +166,42 @@ public abstract class BaseCmd implements Runnable {
         Files.write(configFile.toPath(), yamlConfigReader.writeValueAsBytes(config));
     }
 
+    @SneakyThrows
+    private File computeRootConfigFile() {
+        final String userHome = System.getProperty("user.home");
+        if (!StringUtils.isBlank(userHome) && !"?".equals(userHome)) {
+            final Path langstreamDir = Path.of(userHome, ".langstream");
+            Files.createDirectories(langstreamDir);
+            final Path configFile = langstreamDir.resolve("config");
+            debug("Using config file %s".formatted(configFile));
+            if (!Files.exists(configFile)) {
+                debug("Init config file %s".formatted(configFile));
+                Files.write(
+                        configFile, yamlConfigReader.writeValueAsBytes(new LangStreamCLIConfig()));
+            }
+            return configFile.toFile();
+        }
+        String configBaseDir = System.getProperty("basedir");
+        if (configBaseDir == null) {
+            configBaseDir = System.getProperty("user.dir");
+        }
+        final Path dir = Path.of(configBaseDir, "conf");
+        Files.createDirectories(dir);
+
+        final Path cliYaml = dir.resolve("cli.yaml");
+        debug("Using config file %s".formatted(cliYaml));
+        if (!Files.exists(cliYaml)) {
+            debug("Init config file %s".formatted(cliYaml));
+            Files.write(cliYaml, yamlConfigReader.writeValueAsBytes(new LangStreamCLIConfig()));
+        }
+        return cliYaml.toFile();
+    }
+
     private File computeConfigFile() {
         File configFile;
         final String configPath = getRootCmd().getConfigPath();
         if (configPath == null) {
-            String configBaseDir = System.getProperty("basedir");
-            if (configBaseDir == null) {
-                configBaseDir = System.getProperty("user.dir");
-            }
-            configFile = Path.of(configBaseDir, "conf", "cli.yaml").toFile();
+            configFile = computeRootConfigFile();
         } else {
             configFile = new File(configPath);
         }
@@ -174,7 +214,7 @@ public abstract class BaseCmd implements Runnable {
             final String name = field.getName();
             final String newValue = System.getenv("LANGSTREAM_" + name);
             if (newValue != null) {
-                log("Using env variable: %s=%s".formatted(name, newValue));
+                log(String.format("Using env variable: %s=%s", name, newValue));
                 field.trySetAccessible();
                 field.set(config, newValue);
             }
@@ -267,7 +307,8 @@ public abstract class BaseCmd implements Runnable {
             String strColumn;
 
             final Object appliedValue = valueSupplier.apply(readValue, column);
-            if (appliedValue instanceof final JsonNode columnValue) {
+            if (appliedValue instanceof JsonNode) {
+                final JsonNode columnValue = (JsonNode) appliedValue;
                 if (columnValue.isNull()) {
                     strColumn = "";
                 } else {
